remove old code

--- a/app/index.html
+++ b/app/index.html
@@ -2,15 +2,20 @@
 <html ng-app="applications">
 <head>
   <meta charset="UTF-8">
-  <title>PANTONE 2019</title>
+  <title>BEST EVER COLORS</title>
   <link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
   <h1>
-    <span class="deeppink">PANTONE</span>
-    <span class="yellow">2019</span>
+    <span class="deeppink">BEST</span>
+    <span class="yellow">EVER</span>
+    <span class="deeppink">COLORS</span>
   </h1>
   <ul class="list"></ul>
+  <div class="add-color-wrapper">
+    <span class="add-color-text crimson">Add color: </span>
+    <input type="text"/>
+  </div>
   <script type="text/javascript" src="scripts/applications.js"></script>
 </body>
 </html>
