--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   <ul class="list"></ul>
   <div class="add-color-wrapper">
     <span class="add-color-text crimson">Add color: </span>
-    <input type="text"/>
+    <input type="text" onblur="addColor()"/>
   </div>
   <script type="text/javascript" src="scripts/applications.js"></script>
 </body>
