--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html ng-app="applications">
+<html>
 <head>
   <meta charset="UTF-8">
   <title>BEST EVER COLORS</title>
@@ -14,8 +14,8 @@
   <ul class="list"></ul>
   <div class="add-color-wrapper">
     <span class="add-color-text crimson">Add color: </span>
-    <input type="text" onblur="addColor()"/>
+    <input type="text"/>
   </div>
-  <script type="text/javascript" src="scripts/applications.js"></script>
+  <script type="text/javascript" src="scripts/script.js"></script>
 </body>
 </html>
